--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="slide">
 
-            <div class="item" style="background-image: url(image/keenam.JPG);">
+            <div class="item" style="background-image: url('/image/keenam.JPG');">
                  <div class="content">
                     <div class="name">LAST</div>
                     <div class="des">Makasi yaa kak karena masih keep in touch with me. It being potential annoying pasti if look at kesibukan dan goals life lu yang sekarang. Sehat, bahagia, dan murah rezeki selalu kakakku. Perhaps I can meet u again, see you!!!</div>
